# opensky-fetcher

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/actions/: lint.yml  test.yml
opensky_fetcher/: __init__.py  cli.py  client.py  database.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_client.py  test_database.py  test_validation.py
tests/cassettes/: TestOpenSkyClient.test_get_token.yaml  TestOpenSkyClient.test_get_token_caching.yaml  TestOpenSkyClientAPI.test_get_departures.yaml  TestOpenSkyClientAPI.test_get_token.yaml  TestOpenSkyClientAPI.test_get_token_caching.yaml
